# EasyCutter

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  app.manifest  main.cpp  pch.h
src/app/: Events.cpp  Events.h  IDs.h
src/app/controller/: VideoController.cpp  VideoController.h
src/media/: CMakeLists.txt  Clock.h  FFmpegDecoder.h  FFmpegDemuxer.cpp  FFmpegDemuxer.h  FFmpegException.cpp  FFmpegException.h  Player.cpp  Player.h  Track.h
src/media/ffmpeg/: CMakeLists.txt  FFmpegException.cpp  FFmpegException.h
src/media/ffmpeg/decode/: FFmpegDecoder.cpp  FFmpegDecoder.h  FFmpegDemuxer.cpp  FFmpegDemuxer.h
src/media/ffmpeg/utils/: FFmpegAVCodecContext.cpp  FFmpegAVCodecContext.h  FFmpegAVFrame.cpp  FFmpegAVFrame.h  FFmpegAVFramePipline.h  FFmpegAVPacket.cpp  FFmpegAVPacket.h  FFmpegAVPacketQueue.cpp  FFmpegAVPacketQueue.h
src/media/video/: FFmpegDecoder.cpp  FFmpegDecoder.h  VideoFrame.h
src/ui/: ApplicationFrame.cpp  ApplicationFrame.h  Color.h  IDs.h  IGraphicsDevice.h  Shape.h
src/ui/menu/: MainMenuBar.cpp  MainMenuBar.h  MainMenuHandler.cpp  MainMenuHandler.h
src/ui/panel/: VideoPanel.cpp  VideoPanel.h
